Added a support for teams retrival
